fix: footer not centered

--- a/styles/style.css
+++ b/styles/style.css
@@ -300,6 +300,8 @@
   justify-content: space-between;
   margin-top: 180px;
   margin-bottom: 88px;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 1000px;
   width: 100%;
 }
